# opengamesir

./: .gitmodules  C2_PROTOCOL.md  Cargo.toml  README.md
hidapi-sys/: Cargo.toml  build.rs
src/: driver.rs  hid.rs  lib.rs  main.rs  profile.rs  state.rs  udev.rs
src/driver/: device.rs  profile.rs
ui/: .metadata  README.md  pubspec.yaml
ui/lib/: main.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/test/: widget_test.dart
